--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ img{
     width: 20%;
     margin-left: auto;
     margin-right: auto;
-    padding: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
 }
 
 .pothole{
@@ -40,7 +41,8 @@ img{
     width: 5%;
     margin-left: auto;
     margin-right: auto;
-    padding: 50px;
+    padding-left: 50px;
+    padding-bottom: 50px;
 }
 
 div{
