--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ img{
     width: 20%;
     margin-left: auto;
     margin-right: auto;
-    padding-right: 50px;
-    padding-bottom: 50px;
+    padding-right: 5%;
+    padding-bottom: 5%;
 }
 
 .pothole{
@@ -33,7 +33,7 @@ img{
     width: 15%;
     margin-left: auto;
     margin-right: auto;
-    padding: 50px;
+    padding: 5%;
 }
 
 .pub{
@@ -41,8 +41,8 @@ img{
     width: 5%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 50px;
-    padding-bottom: 50px;
+    padding-left: 5%;
+    padding-bottom: 5%;
 }
 
 div{
